# e-notary

./: .gitignore  mypy.ini  pyproject.toml
src/common/: admin.py  constants.py  fields.py  fileds.py  models.py  ocr.py  utils.py
src/common/migrations/: 0002_client.py  0003_client_created_client_modified.py  0004_idupload.py  0005_client_back_client_face.py  0006_client_generated_doc.py  0007_template_client_template.py  0008_client_cost_client_registration_number_client_tax_and_more.py  0009_client_receipt_client_receipt_number_and_more.py
src/main/settings/: common.py
